# Pflash

./: LICENSE  README.md  pyproject.toml
src/pflash/: cli.py  config.json  config.py  env_check.py  exceptions.py  openocd.py  plo.py  project.py  project_check.py  ramdisk_flash.py
src/pflash/assets/: config.json
src/pflash/assets/openocd/: ftdi_som.cfg  ftdi_zcu104.cfg  jlink_zcu104.cfg
