[project]
name = "pflash"
version = "0.1.0"
description = ""
authors = [
    {name = "Dariusz Sabała",email = "70911794+dsabala@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10 <4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "pflash", from = "src"}]

[tool.poetry.scripts]
pflash = "pflash.cli:cli_entrypoint"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
